--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+transformers==4.34.0
+trl==0.7.1
+datasets==2.14.5
 torch --index-url https://download.pytorch.org/whl/cu121
 torchvision --index-url https://download.pytorch.org/whl/cu121
 torchaudio --index-url https://download.pytorch.org/whl/cu121
